samples/_failures_safe/1761299269_1b726c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a1e51f55.c: In function ‘process_log_file’:
./samples/SAFE/__tmp_a1e51f55.c:129:15: error: ‘MAX_LINE’ undeclared (first use in this function)
  129 |     char line[MAX_LINE
      |               ^~~~~~~~
./samples/SAFE/__tmp_a1e51f55.c:129:15: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_a1e51f55.c:129:23: error: expected ‘]’ at end of input
  129 |     char line[MAX_LINE
      |                       ^
      |                       ]
./samples/SAFE/__tmp_a1e51f55.c:129:5: error: expected declaration or statement at end of input
  129 |     char line[MAX_LINE
      |     ^~~~
